--- a/index.html
+++ b/index.html
@@ -1,29 +1,5 @@
 ---
+layout: default
+title: "GitHub-hosted Blog Example"
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>GitHub-hosted Blog Example</title>
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/x-icon" href="{{ site.url }}/favicon.ico">
-</head>
-<body>
-
-<header>
-<h1>GitHub-hosted Blog Example
-</header>
-
-<p>🚧 This page will demonstrate how to host a blog or other semi-dynamic content on GitHub.</p>
-
-<footer>
-<a href="https://github.com/penguineer/gh-blog">Find me on GitHub.</a>
-</footer>
-
-</body>
-</html>
+🚧 This page will demonstrate how to host a blog or other semi-dynamic content on GitHub.
