--- a/index.html
+++ b/index.html
@@ -3,3 +3,14 @@ layout: default
 title: "GitHub-hosted Blog Example"
 ---
 🚧 This page will demonstrate how to host a blog or other semi-dynamic content on GitHub.
+
+{% for post in site.posts limit:10 %}
+<h2 {% if forloop.first == false %}class="index-followup"{% endif %}><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h2>
+{% include postmeta.html date=post.date author=post.author.display_name %}
+{% if forloop.first == true %}
+{{ post.content }}
+{% else %}
+{{ post.excerpt }}
+{% endif %}
+<p class="followup"><a href="{{ site.url }}{{ post.url }}"><span>Go to <em>{{ post.title }}</em></span></a></p>
+{% endfor %}
